2005-08-10  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-fm/hildon-file-chooser-dialog.c (handle_folder_popup):
	use logical string for message for generic error. N#13795
	* po/en_GB.po: added sfil_ni_operation_failed translation
	
	* hildon-fm/hildon-file-system-info.[ch]:
	(hildon_file_system_info_get_icon_at_size) Added new interface to
	get an icon in arbitrary size. N#16986

2005-08-09  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-fm/hildon-file-system-model.c: Now MMC state is
	investigated immediately when the widget is created. It makes the
	creation to take a bit more time, but ensures that MMC locations
	are usable as well right from the start.

	* hildon-fm/hildon-file-chooser-dialog.c: Allow setting limit to
	the filename. Added two new properties:

	- "max-full-path-length": Works as current limitation system, but
	you can now change the value as well (if needed, defaults to 255)

	- "max-name-length": Limits the length of individual file/folder
	name as entered by user (note that possible hidden
	extension/folder path make the name longer).

2005-08-03  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-fm/hildon-file-chooser-dialog.c
	(hildon_file_chooser_dialog_get_paths): remove leading dots from
	user provided file names (otherwise files are be hidden by the
	filemanager, and the user has no way to access them.)

2005-08-01  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-file-selection.c: GtkTreeModelSort didn't keep
	the order very well for equal nodes, therefore a sort 
	function was fixed to handle device nodes correctly.
	
	* hildon-file-system-model.c: Now allowing load_uri to access
	gateway before gateway is accessed by UI.

	* hildon-file-system-settings.[ch]: Added
	_hildon_file_system_settings_ready() for checking if all settings
	have been loaded.

2005-07-26  Luc Pionchon  <luc.pionchon@nokia.com>
