@@ -1,1 +1,0 @@
-usr/share/locale/en_GB/LC_MESSAGES/hildon-fm.mo
