@@ -1,1 +1,0 @@
-usr/share/osso/l10n/hildon-fm/*
