@@ -1,11 +1,0 @@
-Source: hildon-fm-l10n-src
-Section: x11
-Priority: optional
-Maintainer: Luc Pionchon <luc.pionchon@nokia.com>
-Build-Depends: debhelper (>= 4.0.0), gettext
-Standards-Version: 3.6.0
-
-Package: hildon-fm-l10n-engb
-Architecture: all
-Description: Locale for package hildon-fm
- en_GB locale for hildon-fm.
